--- a/2-C-main/index.html
+++ b/2-C-main/index.html
@@ -29,15 +29,15 @@
 <!--Segunda seção    do  meu código-->
 
     <section id="profissao">
-        <h2 class="profissao-titulo">Áreas da Minha Profissão?</h2>
+        <h2 class="profissao-titulo">Áreas da Minha Profissão</h2>
         <div class="profissao-todos">
             <span></span>
             <div class="profissao-div">
                 <img class="profissao-imagem" src="Marcelo.jpeg" alt="foto ">
                 <h3 class="profissao-nome">Nome Imagem  01</h3>
-                <a href="https://linkedin.com/marcelopaludetto"><img class="profissao-icone" src="linkedin.png"
+                <a href="https://linkedin.com"><img class="profissao-icone" src="linkedin.png"
                         alt="icone linkedin"></a>
-                <a href="https://instagram.com/marcelopaludetto"><img class="profissao-icone" src="instagram.png"
+                <a href="https://instagram.com"><img class="profissao-icone" src="img/"
                         alt="icone instagram"></a>
             </div>
             <div class="profissao-div">
