--- a/2-C-main/index.html
+++ b/2-C-main/index.html
@@ -35,25 +35,25 @@
             <div class="profissao-div">
                 <img class="profissao-imagem" src="Marcelo.jpeg" alt="foto ">
                 <h3 class="profissao-nome">Nome Imagem  01</h3>
-                <a href="https://linkedin.com"><img class="profissao-icone" src="linkedin.png"
+                <a href="https://linkedin.com"><img class="profissao-icone" src="img/linkedin.png"
                         alt="icone linkedin"></a>
-                <a href="https://instagram.com"><img class="profissao-icone" src="img/"
+                <a href="https://instagram.com"><img class="profissao-icone" src="img/instagram.png"
                         alt="icone instagram"></a>
             </div>
             <div class="profissao-div">
                 <img class="profissao-imagem" src="Gabi.jpg" alt="foto ">
                 <h3 class="profissao-nome">Nome Imagem  02</h3>
                 <a href="https://www.linkedin.com/in/gabriela-marcomini-de-lima/"><img class="profissao-icone"
-                        src="linkedin.png" alt="icone linkedin"></a>
-                <a href="https://www.instagram.com/gabriela_marcomini/"><img class="profissao-icone" src="instagram.png"
+                        src="img/linkedin.png" alt="icone linkedin"></a>
+                <a href="https://www.instagram.com"><img class="profissao-icone" src="img/instagram.png"
                         alt="icone instagram"></a>
             </div>
             <div class="profissao-div">
                 <img class="profissao-imagem" src="Liz.jpg" alt="foto">
                 <h3 class="profissao-nome">Nome Imagem  03</h3>
                 <a href="https://www.linkedin.com/in/lizandrarlm-duarte/"><img class="profissao-icone"
-                        src="linkedin.png" alt="icone linkedin"></a>
-                <a href="https://www.instagram.com/lizandrarlm"><img class="profissao-icone" src="instagram.png"
+                        src="img/linkedin.png" alt="icone linkedin"></a>
+                <a href="https://www.instagram.com"><img class="profissao-icone" src="img/instagram.png"
                         alt="icone instagram"></a>
             </div>
             <span></span>
