--- a/2-C-main/index.html
+++ b/2-C-main/index.html
@@ -11,14 +11,14 @@
         <img class="cabecalho-imagem" src="img/robotics.png" alt="logo-profissao">
         <ul class="cabecalho-lista">
             <li class="cabecalho-lista-item">Escola</li>
-            <li class="cabecalho-lista-item">profissao</li>
+            <li class="cabecalho-lista-item">Professor</li>
         </ul>
     </header>
 
     <section class="profissao">
 
         <div class="profissao-div-conteudo">
-            <h2 class="profissao-titulo">Sobre a Robótica</h2>
+            <h2 class="profissao-titulo">Sobre a profissao Professor</h2>
             <p class="profissao-titulo-um"> A robótica é um campo multidisciplinar que envolve conhecimentos de mecânica, eletrônica, hidráulica, pneumática e computação.</p>
             <p class="profissao-titulo-dois"> A robótica é o estudo dos robôs, que, por sua vez, são sistemas autônomos existentes no mundo físico capazes de sentir o ambiente e agir sobre ele.</p>
         </div>
