--- a/2-C-main/index.html
+++ b/2-C-main/index.html
@@ -19,12 +19,12 @@
 
         <div class="profissao-div-conteudo">
             <h2 class="profissao-titulo">Sobre a profissao Professor</h2>
-            <p class="profissao-titulo-um"> A robótica é um campo multidisciplinar que envolve conhecimentos de mecânica, eletrônica, hidráulica, pneumática e computação.</p>
-            <p class="profissao-titulo-dois"> A robótica é o estudo dos robôs, que, por sua vez, são sistemas autônomos existentes no mundo físico capazes de sentir o ambiente e agir sobre ele.</p>
+            <p class="profissao-titulo-um">Ser professor é poder transformar realidades, despertar sonhos e impactar no futuro de muitos alunos. É ter vocação e sabedoria, especialmente a partir da pandemia, que fez com que todos tivéssemos que nos reinventar. Os conhecidos "quadro-negro e giz" deram lugar às diferentes formas mais contemporâneas de ensinar</p>
+            <p class="profissao-titulo-dois">Professor é o profissional propriamente dito, aquele que, no ato da docência, emprega os conhecimentos adquiridos em sua formação, sem se envolver socialmente. Já o educador vai além da profissão. Ele é movido pela vocação de estar ensinando o tempo todo, em sala de aula ou fora dela.</p>
         </div>
         <img class="profissao-imagem" src="img/professor.png" alt="robo">
 
-    </section>
+    </section
 
 <!--Segunda seção    do  meu código-->
 
