--- a/2-C-main/index.html
+++ b/2-C-main/index.html
@@ -33,8 +33,8 @@
         <div class="profissao-todos">
             <span></span>
             <div class="profissao-div">
-                <img class="profissao-imagem" src="Marcelo.jpeg" alt="foto ">
-                <h3 class="profissao-nome">Nome Imagem  01</h3>
+                <img class="profissao-imagem" src="img/technology.png" alt="foto">
+                <h3 class="profissao-nome">professor de robotica</h3>
                 <a href="https://linkedin.com"><img class="profissao-icone" src="img/linkedin.png"
                         alt="icone linkedin"></a>
                 <a href="https://instagram.com"><img class="profissao-icone" src="img/instagram.png"
