--- a/2-C-main/index.html
+++ b/2-C-main/index.html
@@ -41,8 +41,8 @@
                         alt="icone instagram"></a>
             </div>
             <div class="profissao-div">
-                <img class="profissao-imagem" src="Gabi.jpg" alt="foto ">
-                <h3 class="profissao-nome">Nome Imagem  02</h3>
+                <img class="profissao-imagem" src="img/professor-do-sexo-masculino-ensina-ao-aluno-uma-linguagem-de-programacao_173125-597.avif" alt="foto ">
+                <h3 class="profissao-nome">professor de progamacao</h3>
                 <a href="https://www.linkedin.com/in/gabriela-marcomini-de-lima/"><img class="profissao-icone"
                         src="img/linkedin.png" alt="icone linkedin"></a>
                 <a href="https://www.instagram.com"><img class="profissao-icone" src="img/instagram.png"
