--- a/2-C-main/index.html
+++ b/2-C-main/index.html
@@ -49,8 +49,8 @@
                         alt="icone instagram"></a>
             </div>
             <div class="profissao-div">
-                <img class="profissao-imagem" src="Liz.jpg" alt="foto">
-                <h3 class="profissao-nome">Nome Imagem  03</h3>
+                <img class="profissao-imagem" src="img/images.jpeg" alt="foto">
+                <h3 class="profissao-nome">professor de matematica</h3>
                 <a href="https://www.linkedin.com/in/lizandrarlm-duarte/"><img class="profissao-icone"
                         src="img/linkedin.png" alt="icone linkedin"></a>
                 <a href="https://www.instagram.com"><img class="profissao-icone" src="img/instagram.png"
