--- a/2-C-main/index.html
+++ b/2-C-main/index.html
@@ -58,6 +58,9 @@
             </div>
             <span></span>
             <span></span>
-
+        </section>
+        <footer class="rodape">
+        <p> <strong>Samuel Freitas</strong></p>
+        </footer>
 </body>
 </html>
