--- a/2-C-main/index.html
+++ b/2-C-main/index.html
@@ -33,7 +33,7 @@
         <div class="profissao-todos">
             <span></span>
             <div class="profissao-div">
-                <img class="profissao-imagem" src="img/technology.png" alt="foto">
+                <img class="profissao-imagem" id="robotica" src="img/technology.png" alt="foto">
                 <h3 class="profissao-nome">professor de robotica</h3>
                 <a href="https://linkedin.com"><img class="profissao-icone" src="img/linkedin.png"
                         alt="icone linkedin"></a>
