--- a/2-C-main/index.html
+++ b/2-C-main/index.html
@@ -41,7 +41,7 @@
                         alt="icone instagram"></a>
             </div>
             <div class="profissao-div">
-                <img class="profissao-imagem" src="img/professor-do-sexo-masculino-ensina-ao-aluno-uma-linguagem-de-programacao_173125-597.avif" alt="foto ">
+                <img class="profissao-imagem" id="progamacao" src="img/professor-do-sexo-masculino-ensina-ao-aluno-uma-linguagem-de-programacao_173125-597.avif" alt="foto ">
                 <h3 class="profissao-nome">professor de progamacao</h3>
                 <a href="https://www.linkedin.com/in/gabriela-marcomini-de-lima/"><img class="profissao-icone"
                         src="img/linkedin.png" alt="icone linkedin"></a>
@@ -49,7 +49,7 @@
                         alt="icone instagram"></a>
             </div>
             <div class="profissao-div">
-                <img class="profissao-imagem" src="img/images.jpeg" alt="foto">
+                <img class="profissao-imagem" id="matematica" src="img/images.jpeg" alt="foto">
                 <h3 class="profissao-nome">professor de matematica</h3>
                 <a href="https://www.linkedin.com/in/lizandrarlm-duarte/"><img class="profissao-icone"
                         src="img/linkedin.png" alt="icone linkedin"></a>
