--- a/2-C-main/index.html
+++ b/2-C-main/index.html
@@ -34,7 +34,7 @@
             <span></span>
             <div class="profissao-div">
                 <img class="profissao-imagem" id="robotica" src="img/technology.png" alt="foto">
-                <h3 class="profissao-nome">Prof. robotica</h3>
+                <h3 class="profissao-nome">Prof. robótica</h3>
                 <a href="https://linkedin.com"><img class="profissao-icone" src="img/linkedin.png"
                         alt="icone linkedin"></a>
                 <a href="https://instagram.com"><img class="profissao-icone" src="img/instagram.png"
@@ -42,7 +42,7 @@
             </div>
             <div class="profissao-div">
                 <img class="profissao-imagem" id="progamacao" src="img/professor-do-sexo-masculino-ensina-ao-aluno-uma-linguagem-de-programacao_173125-597.avif" alt="foto ">
-                <h3 class="profissao-nome">Prof. progamacao</h3>
+                <h3 class="profissao-nome">Prof. progamação</h3>
                 <a href="https://www.linkedin.com/in/gabriela-marcomini-de-lima/"><img class="profissao-icone"
                         src="img/linkedin.png" alt="icone linkedin"></a>
                 <a href="https://www.instagram.com"><img class="profissao-icone" src="img/instagram.png"
@@ -50,7 +50,7 @@
             </div>
             <div class="profissao-div">
                 <img class="profissao-imagem" id="matematica" src="img/images.jpeg" alt="foto">
-                <h3 class="profissao-nome">Prof. matematica</h3>
+                <h3 class="profissao-nome">Prof. matemática</h3>
                 <a href="https://www.linkedin.com/in/lizandrarlm-duarte/"><img class="profissao-icone"
                         src="img/linkedin.png" alt="icone linkedin"></a>
                 <a href="https://www.instagram.com"><img class="profissao-icone" src="img/instagram.png"
