--- a/2-C-main/index.html
+++ b/2-C-main/index.html
@@ -60,7 +60,7 @@
             <span></span>
         </section>
         <footer class="rodape">
-        <p> <strong>Samuel Freitas</strong></p>
+        <p> <strong>Guilherme Alfredo</strong></p>
         </footer>
 </body>
 </html>
