--- a/index.html
+++ b/index.html
@@ -8,23 +8,23 @@
 </head>
 <body>
     <header class="cabecalho">
-        <img class="cabecalho-imagem" src="img/robotics.png" alt="logo-profissao">
+        <img class="cabecalho-imagem" src="img/teachings.png" alt="logo-profissao">
         <ul class="cabecalho-lista">
             <li class="cabecalho-lista-item">Escola</li>
-            <li class="cabecalho-lista-item">profissao</li>
+            <li class="cabecalho-lista-item">Professor</li>
         </ul>
     </header>
 
     <section class="profissao">
 
         <div class="profissao-div-conteudo">
-            <h2 class="profissao-titulo">Sobre a Robótica</h2>
-            <p class="profissao-titulo-um"> A robótica é um campo multidisciplinar que envolve conhecimentos de mecânica, eletrônica, hidráulica, pneumática e computação.</p>
-            <p class="profissao-titulo-dois"> A robótica é o estudo dos robôs, que, por sua vez, são sistemas autônomos existentes no mundo físico capazes de sentir o ambiente e agir sobre ele.</p>
+            <h2 class="profissao-titulo">Sobre a profissao Professor</h2>
+            <p class="profissao-titulo-um">Ser professor é poder transformar realidades, despertar sonhos e impactar no futuro de muitos alunos. É ter vocação e sabedoria, especialmente a partir da pandemia, que fez com que todos tivéssemos que nos reinventar. Os conhecidos "quadro-negro e giz" deram lugar às diferentes formas mais contemporâneas de ensinar</p>
+            <p class="profissao-titulo-dois">Professor é o profissional propriamente dito, aquele que, no ato da docência, emprega os conhecimentos adquiridos em sua formação, sem se envolver socialmente. Já o educador vai além da profissão. Ele é movido pela vocação de estar ensinando o tempo todo, em sala de aula ou fora dela.</p>
         </div>
-        <img class="profissao-imagem" src="img/Robotics-cuate .png" alt="robo">
+        <img class="profissao-imagem" src="img/professor.png" alt="robo">
 
-    </section>
+    </section
 
 <!--Segunda seção    do  meu código-->
 
@@ -33,24 +33,24 @@
         <div class="profissao-todos">
             <span></span>
             <div class="profissao-div">
-                <img class="profissao-imagem" src="Marcelo.jpeg" alt="foto ">
-                <h3 class="profissao-nome">Nome Imagem  01</h3>
+                <img class="profissao-imagem" id="robotica" src="img/technology.png" alt="foto">
+                <h3 class="profissao-nome">Prof. robótica</h3>
                 <a href="https://linkedin.com"><img class="profissao-icone" src="img/linkedin.png"
                         alt="icone linkedin"></a>
                 <a href="https://instagram.com"><img class="profissao-icone" src="img/instagram.png"
                         alt="icone instagram"></a>
             </div>
             <div class="profissao-div">
-                <img class="profissao-imagem" src="Gabi.jpg" alt="foto ">
-                <h3 class="profissao-nome">Nome Imagem  02</h3>
+                <img class="profissao-imagem" id="progamacao" src="img/professor-do-sexo-masculino-ensina-ao-aluno-uma-linguagem-de-programacao_173125-597.avif" alt="foto ">
+                <h3 class="profissao-nome">Prof. progamação</h3>
                 <a href="https://www.linkedin.com/in/gabriela-marcomini-de-lima/"><img class="profissao-icone"
                         src="img/linkedin.png" alt="icone linkedin"></a>
                 <a href="https://www.instagram.com"><img class="profissao-icone" src="img/instagram.png"
                         alt="icone instagram"></a>
             </div>
             <div class="profissao-div">
-                <img class="profissao-imagem" src="Liz.jpg" alt="foto">
-                <h3 class="profissao-nome">Nome Imagem  03</h3>
+                <img class="profissao-imagem" id="matematica" src="img/images.jpeg" alt="foto">
+                <h3 class="profissao-nome">Prof. matemática</h3>
                 <a href="https://www.linkedin.com/in/lizandrarlm-duarte/"><img class="profissao-icone"
                         src="img/linkedin.png" alt="icone linkedin"></a>
                 <a href="https://www.instagram.com"><img class="profissao-icone" src="img/instagram.png"
@@ -58,6 +58,9 @@
             </div>
             <span></span>
             <span></span>
-
+        </section>
+        <footer class="rodape">
+        <p> <strong>Guilherme Alfredo</strong></p>
+        </footer>
 </body>
 </html>
